test/sema/unit_unify_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
fn foo<T>(x: (T) -> T) {}

fn main() {
  // CHECK: [[# @LINE + 1 ]]:7: error: cannot unify '() -> unit' with '(_) -> _'
  foo(main);

  // CHECK: [[# @LINE + 1 ]]:14: error: cannot unify '() -> unit' with '(unit) -> unit'
  foo@<unit>(main);
}
